--- a/classes.html
+++ b/classes.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking with Parul</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -14,15 +14,15 @@
 
 <body style="background-color:rgb(241,247,252);">
     <nav class="navbar navbar-light navbar-expand-md" style="background-color:rgb(241,247,252);">
-        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-2">
+        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <div id="welcome" style="background-image:url(&quot;assets/img/koushik-c-392711.jpg&quot;);">
@@ -48,10 +48,10 @@
     <div style="margin-top:40px;">
         <ul class="nav nav-tabs">
             <li class="nav-item"><a class="nav-link active" role="tab" data-toggle="tab" href="#tab-1" style="font-family:Montserrat, sans-serif;">North Indian</a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2" style="font-family:Montserrat, sans-serif;">South </a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3" style="font-family:Montserrat, sans-serif;">Street </a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4" style="font-family:Montserrat, sans-serif;">Tab</a></li>
-            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-5" style="font-family:Montserrat, sans-serif;">Tab</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-2" style="font-family:Montserrat, sans-serif;">South Indian</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-3" style="font-family:Montserrat, sans-serif;">Street Food, Chaats</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-4" style="font-family:Montserrat, sans-serif;">Gujarati Cuisine</a></li>
+            <li class="nav-item"><a class="nav-link" role="tab" data-toggle="tab" href="#tab-5" style="font-family:Montserrat, sans-serif;">Festivals</a></li>
         </ul>
         <div class="tab-content">
             <div class="tab-pane active" role="tabpanel" id="tab-1">
@@ -70,17 +70,24 @@
                                         <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
                                         <p class="card-text">Short description</p>
                                         <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
-                                        <p class="card-text">Short description</p><a class="card-link text-white bg-primary" href="#">Reserve </a></div>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h4 class="card-title">Title</h4>
-                                        <h6 class="text-muted card-subtitle mb-2">Subtitle</h6>
-                                        <p class="card-text">Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus.</p><a class="card-link" href="#">Reserve </a>
-                                        <a
-                                        class="card-link" href="#">Link</a>
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
                                     </div>
                                 </div>
                             </div>
@@ -90,19 +97,171 @@
             </div>
             <div class="tab-pane" role="tabpanel" id="tab-2">
                 <p>Content for tab 2.</p>
+                <div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tab-pane" role="tabpanel" id="tab-3">
                 <p>Content for tab 3.</p>
+                <div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tab-pane" role="tabpanel" id="tab-4">
                 <p>Tab content.</p>
+                <div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="tab-pane" role="tabpanel" id="tab-5">
                 <p>Tab content.</p>
+                <div>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <h4 class="text-center card-title">Class Name</h4>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <h6 class="text-muted card-subtitle mb-2">Some Dish</h6>
+                                        <p class="card-text">Short description</p>
+                                        <div class="text-center"><button class="btn btn-success" type="button">Reserve</button></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <footer class="footer navbar-fixed-bottom" style="margin-top:0px;background-color:#404040;">
+    <footer class="footer navbar-fixed-bottom" style="background-color:#404040;">
         <div class="container">
             <div class="row">
                 <div class="col">
@@ -118,7 +277,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
