--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking with Parul</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -14,15 +14,15 @@
 
 <body style="background-color:rgb(241,247,252);">
     <nav class="navbar navbar-light navbar-expand-md" style="background-color:rgb(241,247,252);">
-        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-2">
+        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <div id="welcome" style="background-image:url(&quot;assets/img/59432738indian-spices.jpg&quot;);">
@@ -45,7 +45,7 @@
                 <div class="col-md-4">
                     <p style="color:rgb(61,61,61);font-size:14px;"><em>Parul is a culinary treasure, and she is truly a knowledgeable, beautiful and generous person. I owned a food truck, catering and cooking class business in the United States, and I have taken cooking classes all over the world, and Parul is the best of the best. </em></p>
                     <p
-                    style="color:rgb(61,61,61);font-size:14px;">Jed, USA</p>
+                        style="color:rgb(61,61,61);font-size:14px;">Jed, USA</p>
                 </div>
                 <div class="col-md-4">
                     <p style="color:rgb(61,61,61);font-size:14px;"><em>This is how one can recognize a great teacher, she not only knows the recipe but knows how to teach.</em> </p>
@@ -60,7 +60,7 @@
     </div>
     <div class="row">
         <div class="col">
-            <p class="text-center" style="margin-top:20px;font-family:Montserrat, sans-serif;font-size:14px;"><em>More reviews at: </em><a href="https://www.urbanpro.com/bangalore/parul-thacker/4024269" target="_blank"><em>Urbanpro</em></a></p>
+            <p class="text-center" style="margin-top:20px;font-family:Montserrat, sans-serif;font-size:14px;"><em>More reviews at: </em><a href="https://www.urbanpro.com/bangalore/parul-thacker/4024269"><em>Urbanpro</em></a></p>
         </div>
     </div>
     <div>
@@ -94,7 +94,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
