--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking with Parul</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -14,32 +14,26 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color:rgb(241,247,252);">
-        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-2">
+        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <div class="contact-clean">
         <form method="post">
             <h2 class="text-center" style="font-family:Montserrat, sans-serif;">Contact me</h2>
-            <div class="form-group">
-                <input class="form-control" type="text" name="name" placeholder="Name" style="font-family:Montserrat, sans-serif;">
-            </div>
-            <div class="form-group">
-                <input class="form-control is-invalid" type="email" name="email" placeholder="Email" style="font-family:Montserrat, sans-serif;"><small class="form-text text-danger" style="font-family:Montserrat, sans-serif;">Please enter a correct email address.</small></div>
-            <div class="form-group">
-                <textarea class="form-control" rows="14" name="message" placeholder="Message" style="font-family:Montserrat, sans-serif;"></textarea>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit" style="font-family:Montserrat, sans-serif;">send </button>
-            </div>
-        </form>
+            <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Name" style="font-family:Montserrat, sans-serif;"></div>
+            <div class="form-group"><input class="form-control is-invalid" type="email" name="email" placeholder="Email" style="font-family:Montserrat, sans-serif;"><small class="form-text text-danger" style="font-family:Montserrat, sans-serif;">Please enter a correct email address.</small></div>
+            <div
+                class="form-group"><textarea class="form-control" rows="14" name="message" placeholder="Message" style="font-family:Montserrat, sans-serif;"></textarea></div>
+    <div class="form-group"><button class="btn btn-primary" type="submit" style="font-family:Montserrat, sans-serif;">send </button></div>
+    </form>
     </div>
     <footer class="footer navbar-fixed-bottom" style="margin-top:0px;background-color:#404040;">
         <div class="container">
@@ -57,7 +51,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
