--- a/faq.html
+++ b/faq.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking with Parul</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
@@ -14,15 +14,15 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-md" style="background-color:rgb(241,247,252);">
-        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a>
-            <button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-2">
+        <div class="container-fluid"><a class="navbar-brand" href="index.html" style="color:rgb(40,40,40);font-family:Montserrat, sans-serif;"><strong>Cooking with Parul</strong></a><button class="navbar-toggler" data-toggle="collapse" data-target="#navcol-2"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div
+                class="collapse navbar-collapse" id="navcol-2">
                 <ul class="nav navbar-nav ml-auto">
                     <li class="nav-item" role="presentation"><a class="nav-link" href="classes.html" style="font-family:Montserrat, sans-serif;">Classes </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link active" href="faq.html" style="font-family:Montserrat, sans-serif;">FAQ </a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="contact.html" style="font-family:Montserrat, sans-serif;">Contact me</a></li>
                 </ul>
-            </div>
+        </div>
         </div>
     </nav>
     <div class="container-fluid" style="background-color:#f1f7fc;">
@@ -58,7 +58,7 @@
         </div>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta.2/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
