--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <div class="row">
                 <div class="col-md-6">
                     <h1>Learn to cook delicious Indian food</h1>
+                    <p class="lead">Or book my catering services for your next event in Bangalore</p>
                     <a href="classes.html" class="btn btn-primary btn-lg">Get Started</a>
                     <a href="faq.html" class="btn btn-default">Frequently Asked Questions <i class="fa fa-fw fa-angle-right"></i></a>
                 </div>
@@ -106,9 +107,21 @@
                 <div class="col-md-8 col-sm-8 col-12">
                     <div class="owl-carousel">
                         <div class="review">
+                            <p>Parul is a culinary treasure, and she is truly a knowledgeable, beautiful and generous person. I owned a food truck, catering and cooking class business in the United States, and I have taken cooking classes all over the world, and Parul is the best of the best.</p>
+                            <div class="person">
+                                <span>Jed, USA</span>
+                            </div>
+                        </div>
+                        <div class="review">
                             <p>Parul has been a wonderful encounter. She is such a lively, patient and spontaneous human-being. She will happily explain all about both Indian cuisine and culture and teach you through the tips and tricks she gained through so many years of cooking with passion.</p>
                             <div class="person">
                                 <span>Sonia, Bangalore</span>
+                            </div>
+                        </div>
+                        <div class="review">
+                            <p>Happy to be taking back to Argentina a very enriching experience and lots of tasty dishes to share! And moreover, new friends from Bangalore. Thanks a lot Parul.</p>
+                            <div class="person">
+                                <span>Juan, Argentina</span>
                             </div>
                         </div>
                         <div class="review">
@@ -117,28 +130,16 @@
                                 <span>Vasudev, Bangalore</span>
                             </div>
                         </div>
-                        <div class="review">
-                            <p>Very engaging and genuine classes, which offer a great insight into the local cuisine. Strongly recommended for anyone who would like to try some homemade local dishes and would like a further insight into how to prepare these dishes.</p>
-                            <div class="person">
-                                <span>Kinga, Bangalore</span>
-                            </div>
-                        </div>
-                        <div class="review">
-                            <p>Parul is a culinary treasure, and she is truly a knowledgeable, beautiful and generous person. I owned a food truck, catering and cooking class business in the United States, and I have taken cooking classes all over the world, and Parul is the best of the best.</p>
-                            <div class="person">
-                                <span>Jed, USA</span>
-                            </div>
-                        </div>
-                        <div class="review">
+                       <div class="review">
                             <p>This is how one can recognize a great teacher, she not only knows the recipe but knows how to teach.</p>
                             <div class="person">
                                 <span>Emili, France</span>
                             </div>
-                        </div>
+                        </div> 
                         <div class="review">
-                            <p>Happy to be taking back to Argentina a very enriching experience and lots of tasty dishes to share! And moreover, new friends from Bangalore. Thanks a lot Parul.</p>
+                            <p>Very engaging and genuine classes, which offer a great insight into the local cuisine. Strongly recommended for anyone who would like to try some homemade local dishes and would like a further insight into how to prepare these dishes.</p>
                             <div class="person">
-                                <span>Juan, Argentina</span>
+                                <span>Kinga, Bangalore</span>
                             </div>
                         </div>
                         <div class="review">
@@ -173,7 +174,7 @@
     <footer>
         <div class="container">
             <div class="pull-left">
-                Paruls kitchen &copy; 2018 All Rights Reserved
+                Paruls kitchen &copy; 2019 All Rights Reserved
             </div>
             <ul class="pull-left">
                 <li><a href="https://www.facebook.com/Parulskitchen-315349879104330/"><i class="fa fa-fw fa-facebook"></i></a></li>
