--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="img/icons/002-breakfast.png">
+                    <img src="img/icons/bangalore.png">
                     <h2>Learn to create a 4 course Indian meal in my home kitchen in Bangalore India</h2>
                 </div>
                 <div class="col-sm-4">
-                    <img src="img/icons/003-dish.png">
+                    <img src="img/icons/chef.png">
                     <h2>Get printed recipes, and understand foundational Indian cooking concepts</h2>
                 </div>
                 <div class="col-sm-4">
-                    <img src="img/icons/001-curry.png">
+                    <img src="img/icons/share.png">
                     <h2>Enjoy your meal at our dinner table or take it home to share with family &amp; friends</h2>
                 </div>
             </div>
