--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-4">
-                    <img src="img/icons/bangalore.png">
+                    <img src="img/icons/kitchen.png">
                     <h2>Learn to create a 4 course Indian meal in my home kitchen in Bangalore India</h2>
                 </div>
                 <div class="col-sm-4">
