--- a/index.html
+++ b/index.html
@@ -81,15 +81,15 @@
             <div class="row">
                 <div class="col-sm-4">
                     <img src="img/icons/kitchen.png">
-                    <h2>Learn to create a 4 course Indian meal in my home kitchen in Bangalore India</h2>
+                    <h2>Learn to create a 4 course Indian meal in my home kitchen in Bangalore, India</h2>
                 </div>
                 <div class="col-sm-4">
                     <img src="img/icons/chef.png">
-                    <h2>Get printed recipes, and understand foundational Indian cooking concepts</h2>
+                    <h2>Understand foundational Indian cooking concepts, get hands on experience and printed recipe notes</h2>
                 </div>
                 <div class="col-sm-4">
                     <img src="img/icons/share.png">
-                    <h2>Enjoy your meal at our dinner table or take it home to share with family &amp; friends</h2>
+                    <h2>Enjoy and share your creation at our home or take it to share with family &amp; friends</h2>
                 </div>
             </div>
         </div>
