pricing and formatting

--- a/classes.html
+++ b/classes.html
@@ -91,7 +91,7 @@
                                 <img src="img/icons/001-commerce.png"><!--
                              --><div class="class-top-info">
                                     <span>Pricing (Paid in Cash)</span>
-                                    <h2>40 USD / 2600 INR</h2>
+                                    <h2>1500 INR</h2>
                                 </div>
                             </li>
                         </ul>
